[package]
name = "convert_file"
version = "0.1.0"
authors = ["Shreyan Avigyan (izwk)"]
license = "MIT"
description = "A simple tool for converting files to other formats"
readme = "README.md"
repository = "https://github.com/izwk/convert_file"
keywords = ["cli", "convert_file"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
image = "0.24.2"
